InfraAsACode/config/ingress-config.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: apigateway-ingress
  labels:
    app: apigateway-ingress
spec:
  rules:
  - host: kubernetes.local
    http:
      paths:
      - path: /core(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: theshow-core
            port: 
              number: 5001

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: identity-ingress
  labels:
    app: identity-ingress
spec:
  rules:
  - host: identity.local
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: theshow-identity
            port: 
              number: 5003

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: theshow.local
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: theshow-react
            port:
              number: 5002
